fix: remove folder ellipsis z-index in CSS

--- a/src/assets/modal.css
+++ b/src/assets/modal.css
@@ -206,7 +206,6 @@
     position: absolute;
     top: -15px;
     left: 100px;
-    z-index: 10;
     cursor: pointer;
     font-size: 16px;
     width: 24px;
